Name:                htms
Version:             0.1
Description:         Torque master server
License:             MIT
Author:              Dan Keller
Maintainer:          dbk40@case.edu
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable htms
  Main-is:           Htms.hs
  Build-Depends:     base >= 3, network, bytestring
