name: htms
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: ""
maintainer: dbk40@case.edu
description: Torque master server
author: Dan Keller
data-dir: ""
 
executable htms
    build-depends: base >=3, network >=2.4, bytestring >= 0.10,
                   containers -any, binary -any, datetime -any, transformers -any
    main-is: Htms.hs
    buildable: True
    other-modules: Util
 
